updated table stylings

--- a/lib/draft_guru_web/controllers/player_combine_stats_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_combine_stats_html/index.html.heex
@@ -19,12 +19,12 @@
 <.button>Search</.button>
 </form>
 
-<.table
+<.table 
     id = "player_combine_stats"
     rows = {@players}
     row_click = {&JS.navigate(~p"/player_combine_stats/#{&1}")}
     container_class="pl-0 sm:px-0"
-    table_class="w-full"
+    table_class="px-0 w-full"
 >
 
 <:col 
