--- a/lib/draft_guru_web/controllers/player_id_lookup_html/show.html.heex
+++ b/lib/draft_guru_web/controllers/player_id_lookup_html/show.html.heex
@@ -9,4 +9,4 @@
     <:item title="Canonical Player ID">{@player_id_lookup.player_id}</:item>
 </.list>
 
-<.back navigate={"/player_id_lookup"}>Back to player_id_lookup index table</.back>
+<.back navigate={"/models/player_id_lookup"}>Back to player_id_lookup index table</.back>
